@@ -201,6 +201,9 @@ gtk_window_group_get_current_grab (GtkWindowGroup *window_group)
 /*! \def geda_get_widget_requisition Get Pointer to requisition  Gtk < 3 */
 #define geda_get_widget_requisition(w) &(GTK_WIDGET(w)->requisition)
 
+/*! \def geda_get_widget_state Get style from widget Gtk < 3 */
+#define geda_get_widget_state(w) ((GtkWidget*)w)->state
+
 /*! \def geda_get_widget_style Get style from widget Gtk < 3 */
 #define geda_get_widget_style(w) ((GtkWidget*)w)->style
 
@@ -282,6 +285,10 @@ void gdk_font_unref (GdkFont *font);
 
 #if (GTK_MAJOR_VERSION < 3)
 /* Handle Gtk == 2 and GSEAL_ENABLE is defined */
+
+/*! \def geda_get_widget_state Get style from widget Gtk < 3 */
+#define geda_get_widget_state(w) gtk_widget_get_state((GtkWidget*)w)
+
 /*! \def geda_get_widget_style Get style from widget Gtk < 3 */
 #define geda_get_widget_style(w) gtk_widget_get_style((GtkWidget*)w)
 
