@@ -1,7 +1,10 @@
 2020-02-13 Wiley E. Hill <wileyhill@gmail.com>
 
     * include/geda_gtk_compat.h: Cast gtk_widget_get_parent return pointer
-    * to void for geda_get_widget_parent Gtk >= 3.
+    * to void for geda_get_widget_parent Gtk >= 3. Add macros:
+
+          * geda_set_widget_state
+
     * src/widgets/geda_handlebox.c: Utilize macros:
 
           * geda_get_widget_style
